--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dice Roll Animation</title>
+    <title>Dice Roll with Throw Animation</title>
     <style>
         body {
             display: flex;
@@ -25,7 +25,7 @@
             position: relative;
             transform-style: preserve-3d;
             transform: rotateX(0deg) rotateY(0deg);
-            transition: transform 1s ease-in-out;
+            transition: transform 1s ease-in-out, scale 0.3s;
         }
 
         .side {
@@ -34,6 +34,7 @@
             height: 100px;
             background-color: white;
             border: 2px solid #000;
+            border-radius: 10px; /* 둥근 꼭짓점 */
             font-size: 2rem;
             text-align: center;
             line-height: 100px;
@@ -76,10 +77,14 @@
         }
 
         function rollDice() {
+            // 랜덤한 회전 및 이동값
             const xRand = getRandomInt(0, 360);
             const yRand = getRandomInt(0, 360);
+            const zRand = getRandomInt(-100, 100);
+            const scaleRand = Math.random() * 0.4 + 0.8;  // 약간의 크기 변화
 
-            dice.style.transform = `rotateX(${xRand}deg) rotateY(${yRand}deg)`;
+            // 던지는 듯한 모션 적용
+            dice.style.transform = `translateZ(${zRand}px) scale(${scaleRand}) rotateX(${xRand}deg) rotateY(${yRand}deg)`;
         }
 
         rollButton.addEventListener('click', rollDice);
